--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dependencies = [
     "netCDF4",
     "scipy",
     "pathlib",
-    "pyfesom2",
+    # Note: pyfesom2 and SkillMetrics are installed from git submodules
+    # Install with: pip install -e modules/pyfesom2/ -e modules/SkillMetrics/
 ]
 
 [project.optional-dependencies]
